# [[ Add Internal Libraries ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

# The "main" internal library is not included here because it is special.

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_array")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_vector")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_algorithms")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_list_double")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_list_single")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_queue")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_stack")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_avl_tree")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_heap")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_priority_queue")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_hash")

# Add more internal libraries as needed...

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Internal Libraries ]]
